Prepares the assignments

--- a/CB.ipynb
+++ b/CB.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -74,22 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dober dan\n",
-      "b'dober dan'\n",
-      "b'dober dan'\n",
-      "[100, 111, 98, 101, 114, 32, 100, 97, 110]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sporocilo1 = \"dober dan\"\n",
     "sporocilo1_ascii = sporocilo1.encode(\"ascii\")\n",
@@ -114,19 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'dober ve\\xc4\\x8der'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sporocilo2 = \"dober večer\"\n",
     "sporocilo2_utf8 = sporocilo2.encode(\"utf8\")\n",
@@ -142,23 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "UnicodeEncodeError",
-     "evalue": "'ascii' codec can't encode character '\\u010d' in position 8: ordinal not in range(128)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msporocilo2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mascii\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mUnicodeEncodeError\u001b[0m: 'ascii' codec can't encode character '\\u010d' in position 8: ordinal not in range(128)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sporocilo2.encode(\"ascii\")"
    ]
@@ -172,21 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sporočilo 'dober večer' predstavljeno kot:\n",
-      "Seznam bajtov: [100, 111, 98, 101, 114, 32, 118, 101, 196, 141, 101, 114]\n",
-      "Šestnajstiški niz: 646f626572207665c48d6572\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Sporočilo '{sporocilo2}' predstavljeno kot:\\nSeznam bajtov: {list(sporocilo2_utf8)}\\nŠestnajstiški niz: {sporocilo2_utf8.hex()}\")"
    ]
@@ -202,19 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dober večer\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bajti = b'dober ve\\xc4\\x8der'\n",
     "print(bajti.decode(\"utf8\"))"
@@ -229,20 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "64\n",
-      "b'd'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stevilo = 100\n",
     "print(stevilo.to_bytes(1, 'big').hex())\n",
@@ -258,29 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d 100\n",
-      "o 111\n",
-      "b 98\n",
-      "e 101\n",
-      "r 114\n",
-      "  32\n",
-      "v 118\n",
-      "e 101\n",
-      "č 269\n",
-      "e 101\n",
-      "r 114\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for ch in \"dober večer\":\n",
     "    print(ch, ord(ch))"
@@ -295,29 +219,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100 d\n",
-      "111 o\n",
-      "98 b\n",
-      "101 e\n",
-      "114 r\n",
-      "32  \n",
-      "118 v\n",
-      "101 e\n",
-      "269 č\n",
-      "101 e\n",
-      "114 r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for code in [100, 111, 98, 101, 114, 32, 118, 101, 269, 101, 114]:\n",
     "    print(code, chr(code))"
@@ -342,26 +248,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'\\x03\\x11'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def xor_bytes(s1, s2):\n",
     "    \"\"\"Izvede operacijo XOR med podanima seznamoma bajtov in vrne seznam bajtov\"\"\"\n",
-    "    return bytes(a ^ b for a, b in zip(s1, s2))\n",
+    "    pass\n",
     "\n",
     "\n",
     "xor_bytes([1, 16], [2, 1])"
@@ -369,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -396,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -404,12 +299,12 @@
    "source": [
     "def enc_otp(key, pt):\n",
     "    \"\"\"Sifrirni algoritem enkratne podloge\"\"\"\n",
-    "    return xor_bytes(key, pt)"
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -420,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -428,12 +323,12 @@
    "source": [
     "def dec_otp(key, ct):\n",
     "    \"\"\"Desifrirni algoritem enkratne podloge\"\"\"\n",
-    "    return xor_bytes(key, ct)"
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -455,34 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'xH\\x80\\xb9\\xa1\\xc6\\xc3l5\\xb6\\xd1{\\x0e6\\x9a\\xe8i>4\\xdcR*\\xbd\\xe2\\xc1.\\xab\\xa0\\xdc\\x1a\\xd1T\\x14\\x05l\\x1b#\\xdd\\xe1e9'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def example_enc():\n",
-    "    msg = \"Enkratna podloga je popolno tajna šifra.\"\n",
-    "    key = bytes.fromhex(\"3d26ebcbc0b2ad0d15c6be1f6259fd89495451fc2245cd8dad40c480a87bbb3a7525a9ba4abb930417\")\n",
-    "    return enc_otp(key, msg.encode(\"utf8\"))\n",
+    "    pass\n",
     "\n",
     "example_enc()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -500,34 +382,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Enkratna podloga je popolno tajna šifra.'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def example_dec():\n",
-    "    ct = bytes.fromhex(\"784880b9a1c6c36c35b6d17b0e369ae8693e34dc522abde2c12eaba0dc1ad15414056c1b23dde16539\")\n",
-    "    key = bytes.fromhex(\"3d26ebcbc0b2ad0d15c6be1f6259fd89495451fc2245cd8dad40c480a87bbb3a7525a9ba4abb930417\")\n",
-    "    return dec_otp(key, ct)\n",
+    "    pass\n",
     "\n",
     "example_dec().decode(\"utf8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -556,26 +425,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'**kratna podloga je **polno tajna šifr**'"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def dec_otp_partial(key, ct):\n",
     "    \"\"\"Desifrira samo tiste znake, kjer kljuc ni 0 -- ce je, kot znak nastavi simbol *\"\"\"\n",
-    "    return bytes(k ^ c if k > 0 else ord(\"*\")  for k, c in zip(key, ct))\n",
+    "    pass\n",
     "\n",
     "dec_otp_partial(\n",
     "    bytes.fromhex(\"0000ebcbc0b2ad0d15c6be1f6259fd89495451fc0000cd8dad40c480a87bbb3a7525a9ba4abb930000\"),\n",
@@ -585,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -606,29 +464,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Izpis prvih 50 bajtov tajnopisa šestnajstiško\n",
-      "Tajnopis 0, dolžina 109:  03aec6ad3319a165f3cc645e758cf996232d4dfa3f0bbf22dc02ddff023fd79d8a36878d18a043e108568a1879ecdda7cffd...\n",
-      "Tajnopis 1, dolžina 109:  03a9c6a13f57bb63fd9a6b552682e0c4363a51f5315db23ec943d8f10235988a8a36898914f041e70a4ddf0672e292f1d1f0...\n",
-      "Tajnopis 2, dolžina 109:  03aec6ad3319a165f3cc675634c9e88b3f2d51f53f59a83bc943deec47219e938a2dcb8c14f05ef70b5cc61e75abdce681ec...\n",
-      "Tajnopis 3, dolžina 109:  00adc0b63319a779f382645e7593eec43f3151e73b45b835860ad1e84b3796c78621cb8518a34ff60319d91873fdd3e9c8bc...\n",
-      "Tajnopis 4, dolžina 109:  00b0dfb23557a26ab28e67573ac9e689297d4be13159ba32ca09cef04d658d86cf3f999d1ca644fd464ddc1b6ee9dda7c7f9...\n",
-      "Tajnopis 5, dolžina 109:  03aec6ad3719bb64fbcc7e49308de18d27341ef53f45ba23c809c2f602369b88993e858418a60ae10919d9113ce5d3a7c8f0...\n",
-      "Tajnopis 6, dolžina 109:  1fa9c6b73f57a46ae68d2e4f3c9ae0876c2e51b13c42b739860dcaee4b369689867b899514aa43fc1552c3546ffbddeac4f2...\n",
-      "Tajnopis 7, dolžina 109:  06e2d9b43b1ba96bfbcc605a2786eb8b3a7d4dfe7e46be348610dffb542c9b89863682c713b158fd02508a0069efdba7d2f0...\n",
-      "Tajnopis 8, dolžina 109:  17a7c6bc2416ae7cf9832e573093e6c43f3151e73b45b23ac743ddbe51379283813182c718a658fd16508a1b66e2c0e8ccfd...\n",
-      "Tajnopis 9, dolžina 109:  1ea3c3ad3314e87cfe83785e3b9ae4812b3c1ee1315da923cc028bed473683869937818617bf0af90754c41d72ee92eedbbc...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_cts():\n",
     "    cipher_texts = []\n",
@@ -659,70 +499,42 @@
    "source": [
     "### Naloga 5.2: Funkcija `multiple_xor(pos, cts)`\n",
     "\n",
-    "Implementirajte metodo `multiple_xor(pos, cts)`, ki na vhodu prejme pozicijo znaka v tajnopisu in seznam vseh tajnopisov. Metoda nato vrne bajt ključa oz. vrednost 0, če določi, da bajta v ključu na dani poziciji ni mogoče ugotoviti.\n",
+    "Implementirajte funkcijo `multiple_xor(pos, cts)`, ki na vhodu prejme pozicijo znaka v tajnopisu in seznam tajnopisov. Metoda nato vrne bajt ključa oz. vrednost 0, če določi, da bajta v ključu na dani poziciji ni mogoče ugotoviti.\n",
     "\n",
     "Namig: implementacija je dokaj kratka, če uporabite vgrajeno funkcijo `forall`. V nasprotnem primeru boste potrebovali z vgnezdeno zanko."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*l***ni*a j* e*ropska **zava z zemlj*pi*no lego na *krajnem *e*er* s*edozemlj* in na *kr*jnem *ug* sred*je e*\n",
-      "*k*** s*ove*sk* zgodov**o so pomembn* k*lturni vpli*i prihaj*l* i* s*ednjeevr*pskega *n *penin*ke*a kul*urne*\n",
-      "*l***ni*a i*a *ospodar**o ureditev k* t*melji na pr*stem trg* *da* j* po medn*rodnih *er*lih u*rs*ena m*d dr*\n",
-      "*o***no*anj* z* sloven** izvira iz b*se*e slovani i*vor te p* *e *ej*sen je i*peljank* i* kore*a *lov k* je *\n",
-      "*r*** j* bi*o *me upor**ljeno za drz*vn* tvorbo fed*ralna sl*v*ni*a *i je po *klepu z*se*anja *lo*enske*a na*\n",
-      "*l***ns*i p*ed*iki dan**njih slovenc*v *o se na ili*sko ozem*j* s*ov*nije nas*lili v *es*em st*le*ju v *edme*\n",
-      "*k*** l*ta *is*c so bi** napisani br*zi*ski spomeni*i prvi p*s*i *ok*ment v s*ovensci*i *n prv* s*ovans*i za*\n",
-      "* ***la*i n*ro*ov so m** stevilnimi *ar*di tudi slo*enci s p*l*ti*ni* program*m zahte*al* zedi*je*o slo*enij*\n",
-      "*e***af*ko *ez* sloven**a v srednji *vr*pi oziroma * jugovzh*d*i *vr*pi na st*ciscu a*p *inars*eg* gors*va p*\n",
-      "*a***c *lov*ns*ega pov**ja sestavlja*o *amnine iz c*sa mezoz*i*a *pn*nec dolo*it in k*no*oika *or*j ter*iarj*\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def multiple_xor1(pos, cts):\n",
-    "    for c1 in cts:\n",
-    "        if all(c1[pos] ^ c2[pos] >= 65 or c1[pos] ^ c2[pos] == 0 for c2 in cts if c2 != c1):\n",
-    "            return c1[pos] ^ ord(' ')\n",
-    "    \n",
-    "    return 0\n",
-    "\n",
     "def multiple_xor(pos, cts):\n",
-    "    # na dani poziciji znak tajnopisa paroma XORamo z istoleznim znakom v vsakem drugem tajnopisu\n",
-    "    # ce se za nek znak izkaze, da je rezultat te operacije vedno vrednost >= 65 ali == 0\n",
-    "    # potem je znak na dani poziciji presledek\n",
-    "    # znak XOR-amo s presledkom, dobimo kljuc in ga vrnemo\n",
-    "    # v nasprotnem primeru za znak kljuca vrnemo vrednost 0\n",
-    "    for c1 in cts:\n",
-    "        is_c1_space = True\n",
-    "        \n",
-    "        for c2 in cts:\n",
-    "            if c1 == c2:\n",
-    "                continue\n",
-    "            \n",
-    "            if 0 < c1[pos] ^ c2[pos] < 65:\n",
-    "                is_c1_space = False\n",
-    "            \n",
-    "        if is_c1_space:\n",
-    "            return c1[pos] ^ ord(' ')    \n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Naloga 5.3: Funkcija `guess_key(cts)`\n",
     "\n",
-    "    return 0\n",
-    "\n",
+    "Implementirajte funkcijo `guess_key(cts)`, ki na vhodu prejme seznam tajnopisov in nato vrne seznam bajtov, ki predstavljajo ključ, s katerim so bili tajnopisi ustvarjeni. V primeri, da kakšen bajt v ključu ni mogoče ugotoviti, nastavite njegovo vrednost na 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "def guess_key(ciphertexts):\n",
-    "    key = bytearray(len(ciphertexts[0]))\n",
-    "\n",
-    "    for i in range(len(ciphertexts[0])):\n",
-    "        key[i] = multiple_xor1(i, ciphertexts)\n",
-    "    return key\n",
+    "    pass\n",
     "\n",
     "\n",
     "gk = guess_key(cipher_texts)\n",
@@ -783,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -796,20 +608,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ana pošilja šifrirano sporočilo na strežnik\n",
-      "Tajnopis (HEX): 26a1693affc389cdbe48497f04f7cd983b3de45adc7aff0feb72d29ec77cb35d2673b777f51672e41f8b982303403066c19743de8cf46cc4c20c9492317b68d295f031c3ccacdc4d7156\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ana pripravi sporočilo\n",
     "email = \"\"\"bor@student.uni-lj.si\n",
@@ -837,52 +640,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "def change_ct(ct, new_email):\n",
-    "    cur = \"bor@student.uni-lj.si\"\n",
-    "    new_email = new_email.ljust(len(cur))\n",
-    "    \n",
-    "    l = bytearray(ct)\n",
-    "    \n",
-    "    for i, (c, n) in enumerate(zip(cur, new_email)):\n",
-    "        l[i] = l[i] ^ ord(c) ^ ord(n)\n",
-    "        \n",
-    "    return l"
+    "    pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Z poganjanjem spodnje celice lahko preverite, ali vaša funkcija deluje pravilno. "
+    "S poganjanjem spodnje celice lahko preverite, ali vaša funkcija deluje pravilno. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Streznik FMTP prejel sporocilo: 2aaf751ee5f793cbad4a5c3510b7d7dc7777ea09957aff0feb72d29ec77cb35d2673b777f51672e41f8b982303403066c19743de8cf46cc4c20c9492317b68d295f031c3ccacdc4d7156\n",
-      "Desifrirano sporocilo:\n",
-      "nandi@obvlada.si     \n",
-      "ana@student.uni-lj.si\n",
-      "Hej\n",
-      "\n",
-      "Na faksu si pozabil kapo.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fmtp_receive(key, ct):\n",
     "    print(\"Streznik FMTP prejel sporocilo:\", ct.hex())\n",
