Adds a test for multiple_xor

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -513,7 +513,38 @@
    "outputs": [],
    "source": [
     "def multiple_xor(pos, cts):\n",
-    "    pass"
+    "    pass\n",
+    "\n",
+    "\n",
+    "def test_multiple_xor():\n",
+    "    \"\"\"Testira implementacijo funkcije multiple_xor\n",
+    "    \n",
+    "    Če ne vrne napake, je implementacija pravilna\"\"\"\n",
+    "    \n",
+    "    test_key = bytes.fromhex(\"cd04c883d62ca6e58f3cc3c554bc77\")\n",
+    "    test_cts = [\n",
+    "      enc_otp(test_key, \"v ponedeljek in\".encode(\"ascii\")),\n",
+    "      enc_otp(test_key, \"ob uri na mestu\".encode(\"ascii\")),\n",
+    "      enc_otp(test_key, \"zelo nenavadno \".encode(\"ascii\"))\n",
+    "    ]\n",
+    "\n",
+    "    assert multiple_xor(0, test_cts) == 0\n",
+    "    assert multiple_xor(1, test_cts) == test_key[1]\n",
+    "    assert multiple_xor(2, test_cts) == test_key[2]\n",
+    "    assert multiple_xor(3, test_cts) == 0\n",
+    "    assert multiple_xor(4, test_cts) == test_key[4]\n",
+    "    assert multiple_xor(5, test_cts) == 0\n",
+    "    assert multiple_xor(6, test_cts) == test_key[6]\n",
+    "    assert multiple_xor(7, test_cts) == 0\n",
+    "    assert multiple_xor(8, test_cts) == 0\n",
+    "    assert multiple_xor(9, test_cts) == test_key[9]\n",
+    "    assert multiple_xor(10, test_cts) == 0\n",
+    "    assert multiple_xor(11, test_cts) == 0\n",
+    "    assert multiple_xor(12, test_cts) == test_key[12]\n",
+    "    assert multiple_xor(13, test_cts) == 0\n",
+    "    assert multiple_xor(14, test_cts) == test_key[14]\n",
+    "    \n",
+    "test_multiple_xor()"
    ]
   },
   {
