--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kodiranje celih števil je preprosteje: le uporabimo [funkcijo `int.to_bytes()`](https://docs.python.org/3/library/stdtypes.html#int.to_bytes) Funkciji moramo podati vsaj 2 argumenta: število bajtov, ki se naj uporabijo za kodiranje (tj. dolžina) in pravilo po katerem so bajti urejeni tj. ali gre za pravilo debelega ali tankega konca (`big` ali `little`). Opcijsko lahko nastavimo še, ali gre za predznačeno število."
+    "Kodiranje celih števil je preprosteje: le uporabimo [funkcijo `int.to_bytes()`](https://docs.python.org/3/library/stdtypes.html#int.to_bytes) Funkciji moramo podati vsaj 2 argumenta: število bajtov, ki se naj uporabijo za kodiranje (tj. dolžina) in pravilo po katerem so bajti urejeni tj. ali gre za pravilo debelega ali tankega konca (`big` ali `little` endian). Opcijsko lahko nastavimo še, ali gre za predznačeno število."
    ]
   },
   {
@@ -254,10 +254,9 @@
    },
    "outputs": [],
    "source": [
-    "def xor_bytes(s1, s2):\n",
+    "def xor_bytes(s1: bytes, s2: bytes) -> bytes:\n",
     "    \"\"\"Izvede operacijo XOR med podanima seznamoma bajtov in vrne seznam bajtov\"\"\"\n",
     "    pass\n",
-    "\n",
     "\n",
     "xor_bytes([1, 16], [2, 1])"
    ]
@@ -297,7 +296,7 @@
    },
    "outputs": [],
    "source": [
-    "def enc_otp(key, pt):\n",
+    "def enc_otp(key: bytes, pt: bytes) -> bytes:\n",
     "    \"\"\"Sifrirni algoritem enkratne podloge\"\"\"\n",
     "    pass"
    ]
@@ -321,7 +320,7 @@
    },
    "outputs": [],
    "source": [
-    "def dec_otp(key, ct):\n",
+    "def dec_otp(key: bytes, ct: bytes) -> bytes:\n",
     "    \"\"\"Desifrirni algoritem enkratne podloge\"\"\"\n",
     "    pass"
    ]
@@ -356,9 +355,9 @@
    },
    "outputs": [],
    "source": [
-    "def example_enc():\n",
+    "def example_enc() -> bytes:\n",
     "    pass\n",
-    "\n",
+    "    \n",
     "example_enc()"
    ]
   },
@@ -388,9 +387,9 @@
    },
    "outputs": [],
    "source": [
-    "def example_dec():\n",
+    "def example_dec() -> bytes:\n",
     "    pass\n",
-    "\n",
+    "    \n",
     "example_dec().decode(\"utf8\")"
    ]
   },
@@ -431,7 +430,7 @@
    },
    "outputs": [],
    "source": [
-    "def dec_otp_partial(key, ct):\n",
+    "def dec_otp_partial(key: bytes, ct: bytes) -> bytes:\n",
     "    \"\"\"Desifrira samo tiste znake, kjer kljuc ni 0 -- ce je, kot znak nastavi simbol *\"\"\"\n",
     "    pass\n",
     "\n",
@@ -488,9 +487,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Opazimo, da so vsi tajnopisi dolgi 109 bajtov. \n",
+    "Opazimo, da so vsi tajnopisi dolgi točno 109 bajtov. \n",
     "\n",
-    "Vaša naloga je, da ugotovite ključ in z njim dešifrirajte sporočila. Pri tem lahko upoštevate še, da so sporočila v Slovenščini ter sestojijo le iz malih črk in presledkov: šumniki, števke in vsa ostala ločila so odstranjeni."
+    "Vaša naloga je, da \n",
+    "\n",
+    "1) ugotovite ključ in z njim \n",
+    "2) dešifrirajte vsa sporočila. \n",
+    "\n",
+    "Pri tem lahko upoštevate še, da so sporočila v Slovenščini ter sestojijo le iz malih črk in presledkov: šumniki, števke in vsa ostala ločila so odstranjeni."
    ]
   },
   {
@@ -512,8 +516,8 @@
    },
    "outputs": [],
    "source": [
-    "def multiple_xor(pos, cts):\n",
-    "    pass\n",
+    "def multiple_xor(pos: int, cts: list[bytes]) -> int:\n",
+    "    pass         \n",
     "\n",
     "\n",
     "def test_multiple_xor():\n",
@@ -553,7 +557,9 @@
    "source": [
     "### Naloga 5.3: Funkcija `guess_key(cts)`\n",
     "\n",
-    "Implementirajte funkcijo `guess_key(cts)`, ki na vhodu prejme seznam tajnopisov in nato vrne seznam bajtov, ki predstavljajo ključ, s katerim so bili tajnopisi ustvarjeni. V primeri, da kakšen bajt v ključu ni mogoče ugotoviti, nastavite njegovo vrednost na 0."
+    "Implementirajte funkcijo `guess_key(cts)`, ki na vhodu prejme seznam tajnopisov in nato vrne seznam bajtov, ki predstavljajo ključ, s katerim so bili tajnopisi ustvarjeni. V primeri, da kakšen bajt v ključu ni mogoče ugotoviti, nastavite njegovo vrednost na 0.\n",
+    "\n",
+    "Opomba: funkcija naj vrne podatek tipa `bytearray` in ne `bytes`. Razlika je v tem, da je podatkovni tip `bytes` nespremenljiv (angl. immutable), tip `bytearray` pa spremenljiv (angl. mutable). Slednje bo prišlo prav v nadaljevanju, ko bomo bajte v ključu ročno spreminjali."
    ]
   },
   {
@@ -564,20 +570,41 @@
    },
    "outputs": [],
    "source": [
-    "def guess_key(ciphertexts):\n",
+    "def guess_key(cipher_texts: list[bytes]) -> bytearray:\n",
     "    pass\n",
     "\n",
     "\n",
     "gk = guess_key(cipher_texts)\n",
-    "for c in cipher_texts:\n",
-    "    print(dec_otp_partial(gk, c).decode(\"ascii\"))"
+    "\n",
+    "def display_ciphertexts(key: bytes, cipher_texts: list[bytes]):\n",
+    "    for c in cipher_texts:\n",
+    "        print(dec_otp_partial(key, c).decode(\"ascii\"))\n",
+    "        \n",
+    "display_ciphertexts(gk, cipher_texts)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nekatere bajte v ključih ugotovi algoritem, ostale pa poskusite dopolniti sami. "
+    "### Naloga 5.4: Ugotavljanje manjkajočih bajtov v ključu\n",
+    "\n",
+    "Nekatere bajte ključ je algoritem ugotovil, preostale pa poiščite sami. Nekaj namigov.\n",
+    "\n",
+    "1. Če je v kakšenm čistopisu očitno, kaj naj bi znak `*` predstavljal, izvedite operacijo `xor` med tistim znakom in istoležnim znakom tajnopisa. Tako boste pridobili bajt ključa na tej poziciji. \n",
+    "2. Trenutni ključ se nahaja v (globalni) spremenljivki `gk`, tajnopisi pa v seznamu `cipher_texts`. \n",
+    "3. Ko spremenite posamezen bajt v ključu, lahko vse tajnopise izpišete s klicem funkcije `display_ciphertexts(gk, cipher_texts)`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "display_ciphertexts(gk, cipher_texts)"
    ]
   },
   {
@@ -634,6 +661,7 @@
    "source": [
     "# Ana in Bor si enkrat tedensko v zivo izmenjata 1000 bajtov\n",
     "# nakljucnih vrednosti za morebitne potrebe sifriranja\n",
+    "# te vrednosti kot napadalec vi ne poznate in je pri nalogi ne smete uporabiti\n",
     "ana_bor_psk = gen_key(1000)"
    ]
   },
@@ -666,7 +694,7 @@
    "source": [
     "Sedaj je na potezi napadalec Nandi.\n",
     "\n",
-    "Implementirajte funckijo `change_ct(ct, new_email)`, ki na vhodu prejme tajnopis in email naslov. Spremenite tajnopis tako, da ga bo strežnik FMTP še vedno brez dešifriral, a kot prejemnik ne bo naveden Bor, temveč email naslov, ki je podan v argumentu `new_email`. Predpostavite lahko, da bo `new_email` vedno krajši ali enak od naslova `bor@student.uni-lj.si`."
+    "Implementirajte funckijo `change_ct(ct, new_email)`, ki na vhodu prejme tajnopis in email naslov, vrne pa modificiran tajnopis. Spremenite tajnopis tako, da ga bo strežnik FMTP še vedno dešifriral, a kot prejemnik ne bo naveden Bor, temveč email naslov, ki je podan v argumentu `new_email`. Predpostavite lahko, da bo `new_email` vedno krajši ali enak od naslova `bor@student.uni-lj.si`."
    ]
   },
   {
@@ -677,7 +705,7 @@
    },
    "outputs": [],
    "source": [
-    "def change_ct(ct, new_email):\n",
+    "def change_ct(ct: bytes, new_email: str) -> bytes:\n",
     "    pass"
    ]
   },
@@ -722,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
